--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
   - docker run kames1984/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-437825532194"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_Access_Key
+  secret_access_key:
+    secure: "$AWS_Secret_Key"
+    
